--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,40 +1,26 @@
-/* The Modal (background) */
-
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 80px;
 }
 
 .modal-content {
-    background-color: rgb(0, 0, 0, 0.5);
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    color: white;
+    background-color: rgba(0, 0, 0, 0) !important;
+    color: rgb(144, 192, 231);
 }
 
+.modal-title {
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    font-size: 40px;
+    opacity: 1 !important;
+}
 
-/* close button */
+.modal-lg {
+    max-width: 100% !important;
+    width: 80% !important;
+}
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: rgb(0, 225, 255);
-    text-decoration: none;
-    cursor: pointer;
+    opacity: 1 !important;
+    color: white !important;
+    text-shadow: none !important;
 }
