--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,19 +3,14 @@
 .name-font {
     position: absolute;
     font-family: 'Roboto Slab', serif;
+    color: rgb(144, 192, 231);
     font-size: 22px;
-    color: rgb(146, 241, 253);
     left: 20px;
     top: -8px;
 }
 
-.name:hover {
-    background-color: rgb(174, 245, 245);
-}
-
 .navbar {
     display: inline-block;
-    justify-content: center;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -25,7 +20,6 @@
     z-index: 100;
 }
 
-
 /* navbar list */
 
 .navbar ul {
@@ -34,7 +28,6 @@
     text-align: right;
     list-style-type: none;
 }
-
 
 /* navbar list items */
 
@@ -49,9 +42,11 @@
 .navbar ul li a {
     font-family: 'Roboto Slab', serif;
     background-color: transparent;
-    color: rgb(146, 241, 253);
+    color: rgb(144, 192, 231);
+    border: 0;
+    transition: 0.3s ease;
 }
 
 .navbar ul li a:hover {
-    background-color: rgb(174, 245, 245);
+    transform: scale(1.1);
 }
